Prevent text from overlapping close button, left align text
BUG=77

Review URL: https://codereview.appspot.com/6445060

--- a/src/timeline.css
+++ b/src/timeline.css
@@ -99,7 +99,8 @@
   border-right: 1px solid #8e8e8e;
   overflow: hidden;
   padding-right: 5px;
-  text-align: right;
+  padding-left: 18px;
+  text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
